# hierarchical_peak_finding

./: .gitignore  How_to_find_peaks.ipynb  How_to_initialize.ipynb  How_to_plot_tree.ipynb  How_to_plot_with_matplotlib.ipynb  README.md  cli.py  dataframes_tutorial.ipynb  errors.py  glossary.rst  hierarchical_peaks.py  peaks.py  peaks_and_valleys.py  peaks_in_matplotlib.py  peaks_in_pandas.py  peaks_in_polars.py  peaky_data.py  plotting_tutorial.ipynb  pyproject.toml  strings.py  synthetic_data_sets.py  trees.py  utilities.py
peakoscope/: __init__.py  __main__.py  data.py  errors.py  formats.py  interface_matplotlib.py  interface_pandas.py  interface_polars.py  peaks.py  peaks_and_valleys.py  testing.py  trees.py  utilities.py
tests/: conftest.py  test_init.py  test_peaks.py  test_trees.py
