[build-system]
requires      = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peakoscope"
requires-python = ">=3.8"
dependencies = []
authors = [
  { name="Eivind Tøstesen", email="contact@tostesen.no" },
]
readme = "README.md"
description = "Data analysis of peak and valley regions"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "peak",
    "valley",
    "time series",
    "nested",
    "regions",
    "hierarchical",
    "data analysis",
    "random walk",
    "feature extraction"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.4.1"]
pandas = ["pandas>=1.3.0"]
polars = ["polars>=0.17.0"]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/eivindtostesen/hierarchical_peak_finding"
Issues = "https://github.com/eivindtostesen/hierarchical_peak_finding/issues"

[tool.setuptools.dynamic]
version = {attr = "peakoscope.__version__"}

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--doctest-modules  --doctest-continue-on-failure --cov-report term-missing --cov=peakoscope"
